--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,4 +27,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: sammcb/latex:latest
+          tags: |
+            sammcb/latex:latest
+            ghcr.io/sammcb/latex:latest
