--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@ jobs:
           push: true
           tags: |
             sammcb/latex:latest
-            ghcr.io/sammcb/latex:latest
+            ghcr.io/${{ github.repository_owner }}/latex:latest
