--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,47 +4,47 @@ on:
   push:
     branches: [main]
 
-# jobs:
-#   main:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v1
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1
-#       - name: Login to DockerHub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-#       - name: Login to GitHub Packages
-#         uses: docker/login-action@v1
-#         with:
-#           registry: ghcr.io
-#           username: ${{ github.repository_owner }}
-#           password: ${{ secrets.CR_PAT }}
-#       - name: Build and push
-#         uses: docker/build-push-action@v2
-#         with:
-#           push: true
-#           tags: |
-#             sammcb/latex:latest
-#             ghcr.io/${{ github.repository_owner }}/latex:latest
 jobs:
-  publish_to_GHCR:
-    name: Publish imgae to GitHub Container Registry
+  main:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to GitHub Packages
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            sammcb/latex:latest
+            ghcr.io/${{ github.repository_owner }}/latex:latest
+# jobs:
+#   publish_to_GHCR:
+#     name: Publish imgae to GitHub Container Registry
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.CR_PAT }}
+#       - name: Login to GitHub Container Registry
+#         run: docker login ghcr.io -u $GITHUB_ACTOR -p ${{ secrets.CR_PAT }}
 
-      - name: Build & tag image
-        run: |
-          docker build -f Dockerfile . \
-            -t ghcr.io/sammcb/latex:latest
-      - name: Publish image
-        run: |
-          docker push ghcr.io/sammcb/latex:latest
+#       - name: Build & tag image
+#         run: |
+#           docker build -f Dockerfile . \
+#             -t ghcr.io/sammcb/latex:latest
+#       - name: Publish image
+#         run: |
+#           docker push ghcr.io/sammcb/latex:latest
