--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
           push: true
           tags: |
             sammcb/latex:latest
-            ghcr.io/${{ github.repository_owner }}/latex:latest
+            ghcr.io/sammcb/latex:latest
 # jobs:
 #   publish_to_GHCR:
 #     name: Publish imgae to GitHub Container Registry
