--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,7 @@
-# name: Publish Docker image
-
+name: Publish Docker image
 on:
   push:
     branches: [main]
-
 jobs:
   main:
     runs-on: ubuntu-latest
